--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Autour+One&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wallop/2.4.1/js/Wallop.min.js" integrity="sha512-uEyESZnRXVZXtfqIT1lXrqz/pmqfsVnxEnafItiKxaLRFT9MRgNL6tOViHswev/Ww4UzWN/LTtybOowljgNPDg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <style>
     
     </style>
