--- a/templates/courses.html
+++ b/templates/courses.html
@@ -25,44 +25,26 @@
     width: 40px;
   }
 
-  .body-container {
-
+  .course-container {
+    
     padding:0 80px;
     margin: 0 auto;
     width: 80%;
 
   }
 
+  h1{
+    color: white;
+    font-size:60px;
+    margin-bottom: 30px;
+  }
   .course-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* Display three courses in one row */
     grid-gap: 20px;
   }
 
-  .course-card {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 15px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    transition: all 0.3s; /* Add a transition for all properties on hover */
-  }
-
-  .course-card a {
-    text-decoration: none;
-    color: #333;
-  }
-
-  .course-card img {
-    max-width: 100%;
-    height: auto;
-  }
-
-  .course-card:hover {
-    background-color: #f0f0f0; /* Change background color on hover */
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.4); /* Increase the box shadow on hover */
-    transform: scale(1.05); /* Slightly scale up the card on hover */
-  }
+  
 
   /* Enhanced button styling */
   .add-course-button {
@@ -73,7 +55,8 @@
     border-radius: 5px;
     text-decoration: none;
     display: inline-block;
-    transition: background-color 0.3s; /* Smooth transition on hover */
+    transition: background-color 0.3s; 
+    margin-bottom: 50px;
   }
 
   .add-course-button:hover {
@@ -92,31 +75,35 @@
 
 .container .box {
   width: 15rem;
-  height: 16rem;
-  padding: 1rem;
+  height: 15rem;
+  padding: 1px;
   background-color: rgba(255, 255, 255, 0.074);
   border: 1px solid rgba(255, 255, 255, 0.222);
-  -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
   border-radius: .7rem;
   transition: all ease .3s;
-}
-
-.container .box {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
+
 .container .box .title {
   font-size: 2rem;
   font-weight: 500;
   letter-spacing: .1em;
-  color:white
+  color:white;
+  text-align: center;
+  padding-top:10px ;
 }
 
 .container .box div img {
   width: 100%;
+  object-fit: cover;
+  object-position:center;
+  aspect-ratio:16/9;
+  border-radius: 0 0 .7rem .7rem ;
+  padding: 0px 3px;
 }
 
 .container .box div p {
@@ -144,14 +131,121 @@
 a{
   text-decoration: none;
 }
+
+
+.addCourse{
+  display: none;
+    top: 15%;
+    left:30%;
+    position: fixed;
+    width: 40%;
+    height: 70%;
+    background-color: rgba(0, 0, 0, 1); /* Add a semi-transparent background */
+    z-index: 999;
+  border: 2px solid white;
+}
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  background: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+.heading{
+  font-size: 40px;
+  text-align: center;
+  color: white;
+  margin-bottom: 10px;
+}
+
+  .info-text {
+    text-align: center;
+    color: white; 
+    opacity: 0.6;
+    padding: 10px;
+  }
+
+  .addCourse label{
+    color: white;
+
+
+  }
+/* Apply these styles to form elements */
+.form-container {
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  
+}
+
+.form-label {
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #333;
+}
+
+.form-input {
+  width: 100%;
+  padding: 10px;
+  margin: 8px 0;
+  color: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: transparent;
+}
+
+.form-input:focus {
+  border: 1px solid #007bff; /* Highlight the input field on focus */
+}
+
+.submit-button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s; /* Smooth transition on hover */
+  cursor: pointer;
+  margin: 10px;
+}
+
+.submit-button:hover {
+  background-color: #0056b3;
+}
+
+/* Styles for the 'Add Course' button within the form */
+.add-course-button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  display: inline-block;
+  transition: background-color 0.3s; /* Smooth transition on hover */
+  cursor: pointer;
+}
+
+.add-course-button:hover {
+  background-color: #0056b3;
+}
+
 </style>
 <nav class="navbar">
+  <a href="/">
   <div class="logo">
     <img src="https://logopond.com/logos/83d086afa834e039fa205045359b86d7.png" alt="Logo">
   </div>
+  </a>
  
 </nav>
-<div class="body-container">
+
+<div class="course-container">
+  <h1>Your Courses:</h1>
   {% if courses %}
   
   <div class="course-grid">
@@ -174,10 +268,138 @@ a{
 
     {% endfor %}
     
+  
   </div>
-  {% endif %}
   <div class="center-button">
-    <a href="/addCourse" class="add-course-button">Add Course</a>
+    <button class="add-course-button">Add Course</button>
   </div>
 </div>
+</div>
+{% endif %}
+<div>
+<div class="addCourse">
+  <button class="close-button" onclick="closeModal()">&#10006;</button>
+<h1 class="heading">Add Course</h1>
+    <div class="info-text">
+      Enter a course title or what you want to learn about. Then enter a list
+      of units, which are the specifics you want to learn. Our AI will
+      generate a course for you!
+  </div>
+  <div class="form-container">
+  
+      <form id="course-form" class="course-form">
+        {% csrf_token %}
+        <div class="form-item">
+          <label for="title" class="form-label">Title</label>
+          <input
+            type="text"
+            name="courseName"
+            id="courseName"
+            autocomplete="off"
+            placeholder="Enter the topic of the course"
+            class="form-input"
+            required
+
+          />
+        </div>
+        <div class="suggestion"></div>
+  
+        <div class="form-item">
+          <label for="units[0]" class="form-label">Unit 1</label>
+          <input
+            type="text"
+            id="units[0]"
+            name="unitNames"
+            placeholder="Enter subtopic of the course"
+            class="form-input"
+            required
+          />
+        </div>
+        <div class="form-item">
+          <label for="units[1]" class="form-label">Unit 2</label>
+          <input
+            type="text"
+            id="units[1]"
+            name="unitNames"
+            placeholder="Enter subtopic of the course"
+            class="form-input"
+            required
+
+          />
+        </div>
+        <div class="form-item">
+          <label for="units[2]" class="form-label">Unit 3</label>
+          <input
+            type="text"
+            id="units[2]"
+            name="unitNames"
+            placeholder="Enter subtopic of the course"
+            class="form-input"
+            required
+
+          />
+        </div>
+        <button type="submit" id="submit-button" class="submit-button">
+          <span id="submit-text">Create</span>
+        </button>
+    </form>
+  </div>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const form = document.getElementById("course-form");
+      const submitButton = document.getElementById("submit-button");
+
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+
+        const data = {
+          courseName: e.srcElement[1].value,
+          units: [
+            e.srcElement[2].value,
+            e.srcElement[3].value,
+            e.srcElement[4].value,
+          ],
+        };
+
+        const res = await fetch("/addCourse/", {
+          method: "post",
+          headers: {
+            "X-CSRFToken": e.srcElement[0].value,
+          },
+          body: JSON.stringify(data),
+        }).then(res=>{
+          location.href=+e.srcElement[1].value;
+        }).catch(err=>{
+          location.href="/login"
+        });
+      });
+      function handleButton(){
+      document.querySelector(".addCourse").style.display="block"
+      document.querySelector(".course-container").style.filter="blur(3px)"
+      
+      document.querySelector(".course-container").style.pointerEvents ="none"
+
+    }
+
+
+    addButton=document.querySelector(".add-course-button")
+    addButton.addEventListener("click",handleButton)
+   
+
+    if (location.hash==="#add"){
+      console.log("hi")
+      handleButton()
+
+    }
+
+
+  
+})
+function closeModal() {
+  document.querySelector(".addCourse").style.display = "none";
+  document.querySelector(".course-container").style.filter = "none";
+  document.querySelector(".course-container").style.pointerEvents = "auto";
+}
+
+  </script>
 {% endblock %}
